css/banner.css
#banner {
    position: fixed;
    bottom: 0px;
    left: 0;
    right: 0;

    width: 100%;

    padding: 2rem;
    margin-bottom: 5px;

    z-index: 5;

    display: flex;
    justify-content: center;

    border-radius: 2rem;
    background: linear-gradient(to right, #92fe9ded, #00c9ffed);
    color: black;
}

#close-button {
    position: absolute;
    right: 2rem;
    top: 2rem;
    cursor: pointer !important;
}

.banner-heading {
    margin: 0 auto !important;
}

@media (max-width: 500px) {
    #banner {
        padding: 1rem;
    }
}

.ticket-parent {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 100% !important;
    /* flex-basis: 0;
    flex-grow: 1; */
}

@media screen and (max-width: 768px) {
    .ticket-parent {
        flex-direction: column;
    }
}
@media screen and (min-width: 768px) {
    .ticket-btn {
        flex: 1 1 0 !important;
    }
}

.ticket-btn {
    flex: 1 1 0;
    width: 100%;
    padding: 10px 30px;
    border-radius: 1.5rem;
    margin-top: 1.2rem !important;
    margin-left: 5px;
    margin-right: 5px;
    background-color: #002240;
    color: white !important;
}

.ticket-btn:hover {
    color: white !important;
    background-color: #084880;
}

